More leonel corrections

--- a/thesis_skel/thesis_DGL.tex
+++ b/thesis_skel/thesis_DGL.tex
@@ -260,7 +260,7 @@ This section includes some sanity checks to examine and verify the quality of th
 \begin{figure}[h!]
   \centering
   \includegraphics[width=14.5cm]{thesis_figures/Nu_analysis/MC_control/Core_position_Profile_MC_wnt_redcut.pdf}
-  \caption{Number of showers reconstructed for each MC core position. The colour scale represents the number of showers reconstructed. The circles with the lower count represent the stations in the array.}
+  \caption{Number of showers reconstructed for each MC core position. The colour scale represents the number of showers reconstructed. The black dots represent the stations in the array.}
   \label{fig:Core_XY_rec}
 \end{figure}
 Fig.~\ref{fig:Rec_Theta} shows the reconstructed zenith angle distributions for the CC and NC neutrino simulations. The peaks in both the distributions correspond to the simulated MC angles. It is also clear that the distribution of the NC channel (Fig.~\ref{sub:fig:Rec_theta_NC}) is slightly wider than that of the CC channel (Fig.~\ref{sub:fig:Rec_theta_CC}) pointing towards a worse resolution. This can be attributed to the reduced total detectable energy carried by an NC shower in comparison to a CC shower. It can also be seen that the distributions of both the channels (open histogram) have a long tail extending towards small values of zenith angle. This is caused due to two reasons. The angular reconstruction used in this analysis is tuned to work best for UHECR showers initiated at the top of the atmosphere with zenith angles below $60^{\circ}$. For neutrinos which can be initiated at any point in the atmosphere the reconstruction is not as efficient. This has been checked by only plotting showers having an injection slant depth < 350 g cm$^{-2}$ as shown in the filled histograms (purple). The second cause of this tail and the worsened resolution is also partially due to the inclusion of ToTd and MoPS. It was seen that the inclusion of these triggers can lead to a worsening of the resolution especially for inclined showers. This effect is more visible when these distributions are compared to reconstructions obtained without the inclusion of these triggers as shown in Fig.~\ref{fig:Rec_Theta_comp} later. The effect is due to a lack of tuned accidental signal rejection for these new triggers which affect the quality of the angular reconstruction as mentioned before. To mitigate this effect an angular fit quality cut is introduced in the analysis which significantly improves the resolution but comes at a cost of reduced efficiency.
@@ -307,7 +307,7 @@ In this subsection the impact of the inclusion of the new triggers to the total 
   \label{fig:Res_Theta_2}
 \end{figure}
 
-Fig.~\ref{fig:Rec_Theta_comp} shows the comparison for reconstructed zenith angle distributions for the CC and NC channels. The blue histogram is the sample with both the new triggers and old triggers included while the red histogram is the sample with only the old triggers active. The distributions look very similar other than the higher number of events in the tails for the sample with new triggers. This increase is more significant for CC in comparison to NC channel since the inclusion of new triggers adds more overall events to the CC channel in comparison to NC. A worsening of the residual is also seen in Fig.~\ref{sub:fig:Res_theta_CC_comp} but as mentioned before is corrected with the $\chi^2/{\text{ndf}} = \chi^2_{\text{red}}$ or goodness of fit cut. 
+Fig.~\ref{fig:Rec_Theta_comp} shows the comparison for reconstructed zenith angle distributions for the CC and NC channels. The blue histogram is the sample with both the new triggers and old triggers included while the red histogram is the sample with only the old triggers active. The distributions look very similar other than the higher number of events in the tails for the sample with new triggers. This increase is more significant for CC in comparison to NC channel since the inclusion of new triggers adds more overall events to the CC channel in comparison to NC. A worsening of the residual is also seen in Fig.~\ref{sub:fig:Res_theta_CC_comp} but as mentioned before is corrected with the angular fit quality or goodness of fit cut, $\chi^2/{\text{ndf}} = \chi^2_{\text{red}}$. 
 The individual contribution of the MoPS and ToTd to the reconstructed theta for all channels in the energy range E$=10^{17}-10^{18.5}$eV is shown in Fig.~\ref{sub:fig:Rec_theta_CC_trig}. It can be clearly seen that both ToTd and MoPS contribute to the higher extended tails. The contribution of MoPS is higher than that of ToTd. The magnitude difference can also be due to higher number of stations with MoPS (2x) in comparison to ToTd.
 
 The angular bias and the evolution of angular resolution with energy, slant depth and MC zenith angle is shown in figures.~\ref{sub:fig:Res_E_comp},~\ref{sub:fig:Res_theta_comp} and \ref{sub:fig:Res_Slant_comp} respectively. The angular bias is usually small within $\sim 2^{\circ}$ and is comparable to the one observed in the sample with only old triggers. The resolution seems to improve with energy and worsens with the injected slant depth which is as expected. The variable used for discrimination, AoP of all the T5 stations is also compared in Fig.~\ref{sub:fig:AoP_comp}. No significant differences are observed between the two samples. 
