--- a/thesis_skel/thesis_follow.tex
+++ b/thesis_skel/thesis_follow.tex
@@ -5,9 +5,9 @@
 \label{chap:follow-up}
 %==============================================================================
 
-One of the most exciting fields of modern day neutrino astrophysics involves scanning the observable sky to look for neutrino sources. As mentioned in section~\ref{subsubsec:Nusources} the observation of TXS 0506+056~\cite{Icecube_txs} and NGC 1068~\cite{Icecube_2022} which are examples of a transient source and a steady state of neutrinos has brought unprecedented excitement to the field. Any observation of a neutrino source offers a chance to significantly increase our overall knowledge about astroparticle physics. Since, Auger is one of the few experiments in the world sensitive to UHE$\nu$s (E > $10^{16}$eV) any improvement in its point source sensitivity increases its capability for neutrino detection. 
+One of the most exciting fields of modern day neutrino astrophysics involves scanning the observable sky to look for neutrino sources. As mentioned in section~\ref{subsubsec:Nusources} the observation of TXS 0506+056~\cite{Icecube_txs} and NGC 1068~\cite{Icecube_2022} which are examples of a transient source and a steady state of neutrinos has brought unprecedented excitement to the field. Any observation of a neutrino source offers a chance to significantly increase our overall knowledge about astroparticle physics. Since the Pierre Auger Observatory is one of the few experiments in the world sensitive to UHE$\nu$s (E > $10^{16}$eV), any improvement in its point source sensitivity increases its capability for neutrino detection. 
 
-In this chapter, the point source sensitivity to $\nu$ events of the SD array is discussed for the zenith angular range explored in this thesis, DG$_{\text{low}}$. Based on the zero neutrino candidates found in the search performed in this work a source declination, $\delta$ dependent neutrino flux is calculated. This process includes calculating the declination dependent exposure and then converting it to a limit on the flux. The improvements to this exposure and sensitivity by the inclusion of new triggers is also discussed. Finally, the new limit is used to scan a few interesting sources which lie in the most sensitive range for the DG$_{\text{low}}$ region.
+In this chapter, the point source sensitivity to $\nu$ events of the SD array is discussed for the zenith angular range explored in this thesis, DG$_{\text{low}}$. Based on the zero neutrino candidates found in the search performed in this work, a source declination ($\delta$) dependent neutrino flux is calculated. This process includes calculating the declination dependent exposure and then converting it to a limit on the flux. The improvements to this exposure and sensitivity by the inclusion of new triggers is also discussed. Finally, the new limit is used to scan a few interesting sources which lie in the most sensitive range for the DG$_{\text{low}}$ region.
 
 \section{Procedure to look for a point like steady source of UHE\texorpdfstring{$\nu$}{}s}
 \label{sec:procedure_point_source}
@@ -28,7 +28,7 @@ where $T$ is the duration of one sidereal day and $\lambda$ is the latitude of t
   \label{fig:Auger_FoV}
 \end{figure}
 
-Fig.~\ref{fig:Auger_FoV} shows the FOV bands for different neutrino search channels (DG$\mathrm{_{\text{low}}}$, DG$\mathrm{_{\text{high}}}$, ES). These bands are plotted in equatorial coordinates as a function of $\mathrm{\alpha - t _{GS}}$ where $\mathrm{t_{GS}}$ is the Greenwich Sidereal Time (GST) converted to for a mean longitude of the Observatory, $l$ calculated as $\mathrm{t_{GS}= 2\pi t/T + l}$. The sensitive declination ranges for different $\mathrm{t_{GS}}$ can be read from the plot which is very useful for real-time transient follow-up. For DG$\mathrm{_{\text{low}}}$ showers the SD of the Pierre Auger Observatory is sensitive to declinations between $\delta \simeq [-85^{\circ} - 40^{\circ}]$. Another way to denote sky coverage for different neutrino searches at Auger is by calculating the time a source is visible to the Observatory for a particular declination. This is plotted in Fig.~\ref{fig:time_per_day} for all three search channels. As it can be seen from the plot all three channels are the most sensitive at two ends of their sensitive declination ranges (DG$\mathrm{_{\text{low}}}$-$\delta \simeq [-70^{\circ}, 35^{\circ}]$) which is a consequence of smaller variation in zenith angle in time for certain directions. The sensitivity sharply decreases beyond these declination values. In the middle of these \textit{two horns} is a plateau like region. It is also seen that generally the fraction of time a source is visible is comparable in the DG$\mathrm{_{\text{low}}}$ and DG$\mathrm{_{\text{high}}}$ channel with both being higher than the ES channel due to the size of the zenith angle windows. The fraction of visible time for vertical showers is also plotted. Even though this fraction of time is significantly high, currently no neutrino search is performed for this region as it is very difficult to differentiate between a cosmic ray and neutrino EAS for this zenith angle range.
+Fig.~\ref{fig:Auger_FoV} shows the FOV bands for different neutrino search channels (DG$\mathrm{_{\text{low}}}$, DG$\mathrm{_{\text{high}}}$, ES). These bands are plotted in equatorial coordinates as a function of $\mathrm{\alpha - t _{GS}}$ where $\mathrm{t_{GS}}$ is the Greenwich Sidereal Time (GST) converted to angle for a mean longitude of the Observatory, $l$ calculated as $\mathrm{t_{GS}= 2\pi t/T + l}$. The sensitive declination ranges for different $\mathrm{t_{GS}}$ can be read from the plot which is very useful for real-time transient follow-up. For DG$\mathrm{_{\text{low}}}$ showers the SD of the Pierre Auger Observatory is sensitive to declinations between $\delta \simeq [-85^{\circ} - 40^{\circ}]$. Another way to denote sky coverage for different neutrino searches at Auger is by calculating the time a source is visible to the Observatory for a particular declination. This is plotted in Fig.~\ref{fig:time_per_day} for all three search channels. As it can be seen from the plot all three channels are the most sensitive at two ends of their sensitive declination ranges (DG$\mathrm{_{\text{low}}}$-$\delta \simeq [-70^{\circ}, 35^{\circ}]$) which is a consequence of smaller variation in zenith angle in time for certain directions. The sensitivity sharply decreases beyond these declination values. In the middle of these \textit{two horns} is a plateau like region. It is also seen that generally the fraction of time in which a source is visible is comparable in the DG$\mathrm{_{\text{low}}}$ and DG$\mathrm{_{\text{high}}}$ channel with both being higher than the ES channel due to the size of the zenith angle windows. The fraction of visible time for vertical showers is also plotted. Even though this fraction of time is significantly high, currently no neutrino search is performed for this region as it is very difficult to differentiate between a cosmic ray and neutrino EAS for this zenith angle range.
 
 
 \begin{figure}[t!]
@@ -60,7 +60,7 @@ The effective area is flavour dependent since for each flavour the shower develo
 \end{figure}
 
 
-where $\varepsilon_{i,c}$ is the neutrino identification efficiency for a 6T5 unit. The declination dependence is taken into account by the $\theta(t)$ dependence of the efficiency. The instantaneous effective area for electron neutrinos with CC interactions in km$^2$ for different zenith angles is plotted in Fig.~\ref{fig:Eff_Area}. The effective area increases with increasing primary energy. It also increases with zenith angles till $\sim$70$^\circ$ after which there is a slight decrease in the effective area which is due to the decrease in neutrino sensitivity at higher zenith angles discussed earlier in section~\ref{subsec:nu_sel_nudeteff}. 
+where $\varepsilon_{i,c}$ is the neutrino identification efficiency for a 6T5 unit. The declination dependence is taken into account by the $\theta(t)$ dependence of the efficiency. The instantaneous effective area for electron neutrinos with CC interactions in km$^2$ for different zenith angles is plotted in Fig.~\ref{fig:Eff_Area}. The effective area increases with increasing primary energy. It also increases with zenith angles until $\sim$70$^\circ$ beyond which there is a slight decrease in the effective area due to the decrease in neutrino sensitivity at higher zenith angles (section~\ref{subsec:nu_sel_nudeteff}). 
 
 The exposure to point-like sources of UHE neutrinos can then be calculated by integrating the effective area for a given time interval and summing over the different flavours (1:1:1 expectation at Earth) and channels as follows:
 \begin{equation}
@@ -83,7 +83,7 @@ The exposure to point-like sources of UHE neutrinos can then be calculated by in
   \label{fig:Hexagon_time}
 \end{figure}
 
-The exposure is $\delta$ dependent due to the dependence of effective area on $\theta(t)$. The effective area can also change with time due to the changes in the number of hexagons $n_{hex}(t)$. This change has been visualized in Fig.~\ref{fig:Hexagon_time}. As it can be seen in the plot the number is relatively stable especially in the period of one sidereal day apart from a few outages which are removed from the searches. The directional exposure for the DGL channels for different fixed energies between 2014-2021 is shown in Fig.~\ref{fig:Exp_dec}. The dashed line shows the exposure calculated in this study by including the new triggers while the solid line shows the exposure calculated with the previous analysis for the same time period. Similar to the exposure calculated for the diffuse flux the exposure is significantly improved for lower energies with the improvement decreasing for higher energies. The shape of the exposure is similar to the observation time plot in Fig.~\ref{fig:time_per_day} with the maximum exposure peaks seen at the same declinations. It is also interesting to not that the exposure at given energy for any given point source with  can be estimated as the ratio between the diffuse exposure~\ref{fig:Limit_comp_1} and the solid angle covered by the DG$_{\text{low}}$ analysis multiplied by the fraction of time the source is visible~\ref{fig:time_per_day}. The solid angle covered by the DG$_{\text{low}}$ analysis is given by $2\pi \int_{60^{\circ}}^{75^{\circ}} \sin \theta \,d \theta \sim 1.515 \text{sr}$.
+The exposure is $\delta$ dependent due to the dependence of effective area on $\theta(t)$. The effective area can also change with time due to the changes in the number of hexagons $n_{hex}(t)$. This change is represented in Fig.~\ref{fig:Hexagon_time}. As it can be seen in the plot the number is relatively stable especially in the period of one sidereal day apart from a few outages which are removed from the searches. The directional exposure for the DGL channels for different fixed energies between 2014-2021 is shown in Fig.~\ref{fig:Exp_dec}. The dashed line shows the exposure calculated in this study by including the new triggers while the solid line shows the exposure calculated with the previous analysis for the same time period. Similar to the one calculated for the diffuse flux, the exposure is significantly improved for lower energies with the improvement decreasing for higher energies. The shape of the exposure is similar to the observation time plot in Fig.~\ref{fig:time_per_day} with the maximum exposure peaks seen at the same declinations. It is also interesting to note that the exposure at a given energy for any given point source can be estimated as the ratio between the diffuse exposure (Fig.~\ref{fig:Limit_comp_1}) and the solid angle covered by the DG$_{\text{low}}$ analysis multiplied by the fraction of time the source is visible~\ref{fig:time_per_day}. The solid angle covered by the DG$_{\text{low}}$ analysis is given by $2\pi \int_{60^{\circ}}^{75^{\circ}} \sin \theta \,d \theta \sim 1.515 \text{sr}$.
 
 % As it can be seen in~\cite{} ES exposure published in~\cite{} is also plotted for comparison. It can be seen that generally the DG$_{low}$ point source exposure is lower than that of ES expect at higher energies where it is comparable. At these energies the different sensitive zenith angle ranges between the channels are the only differentiating factors for the exposure distribution. 
 
@@ -96,13 +96,13 @@ The exposure is $\delta$ dependent due to the dependence of effective area on $\
 
 \section{Flux limits for point-like sources of UHE\texorpdfstring{$\nu$s}{}}
 \label{sec:pfux_limit}
-Since no neutrino candidate was discovered in the search window an upper limit to a  point-like source of UHE neutrinos can be calculated. Similar to the calculation for the diffuse flux the number of expected neutrino events from a point like source at a given declination can be written as:
+Since no neutrino candidate was discovered in the search window, an upper limit to a  point-like source of UHE neutrinos can be calculated. Similar to the calculation for the diffuse flux, the number of expected neutrino events from a point like source at a given declination can be written as:
 
 \begin{equation}
   N_{\text{expected}}(\delta) = \int_{E_{\text{min}}}^{E_{\text{max}}}  \phi(E_{\nu}) \, \xi(E_{\nu}, \delta) \, dE_{\nu}
 \end{equation}
 
-The point source flux is assumed to be independent of time and is assumed to be characterized as a power law, $\phi(E_{\nu}) = k_{\text{PS}} E_{\nu}^{-2}$ for all declinations. The integrated upper-limit from each source can then be further calculated as follows:
+The point source flux is assumed to be independent of time and is characterized as a power law, $\phi(E_{\nu}) = k_{\text{PS}} E_{\nu}^{-2}$ for all declinations. The integrated upper-limit from each source can then be further calculated as follows:
 
 \begin{equation}
   \label{eq:point_flux_limit}
@@ -111,14 +111,14 @@ The point source flux is assumed to be independent of time and is assumed to be 
 
 For this study initially a time period from 1 Jan 2014 till 31 December 2021 is selected. The N$_{\text{Up}}$ = 2.39 is calculated according to the Conrad approach as mentioned in section~\ref{subsec:Conrad}. The exposure is assumed to be uniform within $\pm 0.6\%$ for the time period of search as shown in~\cite{PierreAuger:2017pzq}. 
 
-\begin{figure}[th!]
+\begin{figure}[t!]
   \centering
   \includegraphics[width=0.95\textwidth]{thesis_figures/PointLimits/Point_comp_combined.pdf}
   \caption{90\% C.L. declination dependent upper-limit for different time periods for the DG$_{\text{low}}$ channel of a single flavor point-like flux of UHE. The limit for 01.01.2004-31.12.2013 obtained with the previously done analysis (solid, orange) is combined with the limit obtained in this analysis for 01.01.2014-31.12.2021 (dashed, purple) to give the combined limit for 01.01.2004-31.12.2021 (dashed dotted, black).}
   \label{fig:Dec_limit_comb1}
 \end{figure}
 
-The 90\% C.L. declination dependent upper-limit for the DG$_{\text{low}}$ channel is shown in Fig.~\ref{fig:Dec_limit_new old}. The limit is the most stringent for the times the source is seen the longest. The limit is calculated for the energy range $\sim$ 1.2 $\times 10^{18}$eV - 2.5 $\times 10^{19.5}$eV. The dependence of energy intervals is minimal. This limit is also compared to the limit obtained from the previous analysis for the same time period in the same figure. As it can be seen the limit is significantly improved with new triggers fulfilling one of the primary objectives of this thesis. Further a combined limit is calculated where the old analysis is applied for the time period 01.01.2004–31.12.2013 and the analysis presented in this thesis is applied for the time period 01.01.2014–31.12.2021. This combination is only done under the assumption that the systematics for both the time periods are similar, and 0 neutrino candidates were found in both time periods. This combination along with the limits from the separate time periods is shown in Fig.~\ref{fig:Dec_limit_comb1}. Further this combination is also compared to the point-like source limit calculated with the old analysis for the time period 01.01.2004-31.12.2021. This is presented in Fig.~\ref{fig:Dec_limit_comb2}. For the best declination range of the DG$_{\text{low}}$ channel (-74$^{\circ}$) the limit is improved by a factor of $\sim$ 1.5 for the time period where both the new triggers and old triggers were active i.e. 2014-2021. Since the exposure at high energies is a few magnitudes larger than the one at low energies, the new triggers do not improve the overall limit significantly. The improvement is primarily due to the changes in the Fisher discriminant analysis which were proposed and implemented in this thesis.
+The 90\% C.L. declination dependent upper-limit for the DG$_{\text{low}}$ channel is shown in Fig.~\ref{fig:Dec_limit_new old}. The limit is the most stringent for the times the source is seen the longest. The limit is calculated for the energy range $\sim$ 1.2 $\times 10^{18}$eV - 2.5 $\times 10^{19.5}$eV. The dependence of energy intervals is minimal. This limit is also compared to the limit obtained from the previous analysis for the same time period in the same figure. As it can be seen the limit is significantly improved with new triggers fulfilling one of the primary objectives of this thesis. Furthermore, a combined limit is calculated where the old analysis is applied for the time period 01.01.2004–31.12.2013 and the analysis presented in this thesis is applied for the time period 01.01.2014–31.12.2021. This limit is only computed under the assumption that the systematics for both the time periods are similar, and no neutrino candidates were found in both time periods. The combined limit along with the limits from the separate time periods is shown in Fig.~\ref{fig:Dec_limit_comb1}. Furthermore, the limit is also compared to the point-like source limit calculated with the old analysis for the time period 01.01.2004-31.12.2021. This is presented in Fig.~\ref{fig:Dec_limit_comb2}. For the best declination range of the DG$_{\text{low}}$ channel (-74$^{\circ}$) the limit is improved by a factor of $\sim$ 1.5 for the time period where both the new triggers and old triggers were active i.e. 2014-2021. Since the exposure at high energies is a few magnitudes larger than the one at low energies, the new triggers do not improve the overall limit significantly. The improvement is primarily due to the changes in the Fisher discriminant analysis which were proposed and implemented in this thesis.
 
 
 \begin{figure}[ht]
@@ -140,17 +140,16 @@ A cross-check of the diffuse limit is obtained from the point source analysis by
 
 The diffuse limit can be written as:
 \begin{equation}
-  k_{\text{PS}}^{90\% \text{CL}} < \frac{N_{\text{Up}}}{\int_{\log_{10}E_{\text{min}}}^{\log_{10}E_{\text{max}}} \int_{-\pi/2}^{\pi/2}2\pi \cdot \cos(\delta) \cdot E_{\nu}^{-1} \cdot \xi(E_{\nu}, \delta) \cdot ln(10) \cdot d(\log_{10}(E_{\nu})) \cdot d\delta}
+  k_{\text{PS}}^{90\% \text{CL}} < \frac{N_{\text{Up}}}{\int_{\log_{10}E_{\text{min}}}^{\log_{10}E_{\text{max}}} \int_{-\pi/2}^{\pi/2}2\pi \cdot \cos(\delta) \cdot E_{\nu}^{-1} \cdot \xi(E_{\nu}, \delta) \cdot ln(10) \cdot d(\log_{10}(E_{\nu})) \cdot d\delta} .
 \end{equation}
 
 The diffuse limit from point source analysis is given as: 
 \begin{equation}
-  k_{\text{PS}}^{90\%\text{CL}} < 2.06 \times 10^{-7} \text{GeV cm}^{-2} \text{s}^{-1} \text{sr}^{-1}
+  k_{\text{PS}}^{90\%\text{CL}} < 2.06 \times 10^{-7} \text{GeV cm}^{-2} \text{s}^{-1} \text{sr}^{-1}\, ,
 \end{equation}
+which agrees with the value obtained in eq.~\ref{eq:final_lim}.
 
-Which agrees with the value mentioned in eq.~\ref{eq:final_lim}.
-
-It is also important to mention that even though the overall sensitive declination range for the DG$_{\text{low}}$ analysis is small in comparison to other channels~\cite{Aab_2019_point}, the improvement presented in this thesis is still important as the sensitive declination ranges are not fully overlapping. Thus, if there is a point source at between declinations $ \delta \in [-80^{\circ}, -68^{\circ}]$ then DG$_{\text{low}}$ channel offers the only window at Auger to see UHE$\nu$s from such a source.  
+It is also important to mention that even though the overall sensitive declination range for the DG$_{\text{low}}$ analysis is small in comparison to other channels~\cite{Aab_2019_point}, the improvement presented in this thesis is still important as the sensitive declination ranges are not fully overlapping. Thus, if there is a point source between declinations $ \delta \in [-80^{\circ}, -68^{\circ}]$ then DG$_{\text{low}}$ channel offers the only window at Auger to see UHE$\nu$s from such a source.  
 
 % \begin{figure}[h!]
 %   \centering
@@ -160,7 +159,7 @@ It is also important to mention that even though the overall sensitive declinati
 % \end{figure}
 
 
-The limit obtained in this analysis was then used to constraint some interesting sources which exclusively lie in the DG$_{\text{low}}$ sensitive range. The sources were selected based on their declination and expected energies of neutrinos they could produce which could lie in the region explored. The upper limits on the expected neutrino flux are given under the same assumptions the limits are calculated for i.e. an $E^{-2}$ like flux constant in time. The sources were selected from the Roma-BZCAT catalogue~\cite{Massaro:2008ye}, Fermi 4LAC catalogue~\cite{Ballet:2020hze} and from~\cite{Wakely:2007qpa}. The sources along with their type, declination and right ascension (equatorial coordinates) along with the 90\% C.L. upper limits on the flux obtained are listed in table~\ref{tab:source_limits}. 
+The limit obtained in this analysis was then used to constraint some interesting sources which exclusively lie in the DG$_{\text{low}}$ sensitive range. The sources were selected based on their declination and expected energies of neutrinos they could produce which could lie in the region explored. The upper limits on the expected neutrino flux are given under the assumption of an $E^{-2}$ like neutrino flux constant in time. The sources were selected from the Roma-BZCAT catalogue~\cite{Massaro:2008ye}, Fermi 4LAC catalogue~\cite{Ballet:2020hze} and from~\cite{Wakely:2007qpa}. The sources along with their type, declination and right ascension (equatorial coordinates) and the 90\% C.L. upper limits on the fluxes obtained are listed in table~\ref{tab:source_limits}. 
 
 \begin{table}
   \centering
