Some corrections to intro

--- a/thesis_skel/thesis_DGH.tex
+++ b/thesis_skel/thesis_DGH.tex
@@ -2,7 +2,7 @@
 
 %==============================================================================
 \chapter{Detector Exposure and Limits to the Diffuse Flux of UHE\texorpdfstring{$\nu$}{}s}
-\label{sec:align}
+\label{chap:exp_limits_diffuse}
 %==============================================================================
  
 This chapter aims to detail the procedure used to calculate the detector exposure or sensitivity to neutrinos for the DG$\mathrm{_{\text{low}}}$ region. The efficiencies calculated in the last chapter are used and the final expected neutrino rates are calculated. The first part of the chapter describes the exposure calculation along with the exposure contribution from different channels. Systematic uncertainties which can arise during the full analysis along with their contribution to the exposure are also discussed. 
