--- a/thesis_skel/thesis_DGL.tex
+++ b/thesis_skel/thesis_DGL.tex
@@ -4,7 +4,7 @@
 \chapter{Neutrino Analysis \texorpdfstring{$60^\circ < \theta < 75^\circ$}{}}
 \label{chap:DGL}
 %==============================================================================
-This chapter details the work done to improve the neutrino search performed for the zenith angle range $60^\circ < \theta < 75^\circ$ at the Pierre Auger Observatory. The chapter aims to cover the expected signature in terms of measurable quantities in the Pierre Auger observatory for the particular angular range, a description of the neutrino simulation used to develop the analysis and the reconstruction chain used to reconstruct the neutrino simulations with the Offline framework. Further, the quality cuts used are analysed in more detail, especially in the context of improving the capability of the search by the usage of MoPS and ToTd triggers. In the end, the improvement to the neutrino detection efficiency with the inclusion of MoPS and ToTd is quantified.
+This chapter details the work done to improve the neutrino search performed for the zenith angle range $60^\circ < \theta < 75^\circ$ at the Pierre Auger Observatory. The chapter aims to cover the expected signature in terms of measurable quantities in the Pierre Auger Observatory for the particular angular range, a description of the neutrino simulation used to develop the analysis and the reconstruction chain used to reconstruct the neutrino simulations with the Offline framework. Further, the quality cuts used are analysed in more detail, especially in the context of improving the capability of the search by the usage of MoPS and ToTd triggers. In the end, the improvement to the neutrino detection efficiency with the inclusion of MoPS and ToTd is quantified.
 
 
 \section{SD Neutrino signature \texorpdfstring{$60^{\circ} < \theta < 75^{\circ}$}{}}
