--- a/thesis_skel/thesis_glossary.tex
+++ b/thesis_skel/thesis_glossary.tex
@@ -24,13 +24,13 @@
 \newacronym{EM}{EM}{electromagnetic}
 \newacronym{MVA}{MVA}{multivariate analysis}
 \newacronym{AUGER}{AUGER}{Pierre Auger Observatory}
-\newacronym[plural=EASs,firstplural= extensive air showers (EASs)]{EAS}{EAS}{extensive air shower}
+\newacronym[plural=EASs,firstplural= Extensive Air Showers (EASs)]{EAS}{EAS}{extensive air shower}
 \newacronym{VEM}{VEM}{vertical equivalent muon}
-\newacronym{MoPS}{MoPS}{multiplicity-of-positive-steps}
+\newacronym{MoPS}{MoPS}{Multiplicity-of-Positive-Steps}
 \newacronym{FADC}{FADC}{flash analog-to-digital converters}
 \newacronym{GZK}{GZK}{Greisen–Zatsepin–Kuzmi}
 \newacronym{ToT}{ToT}{time-over-threshold}
-\newacronym{ToTd}{ToTd}{time-over-threshold-deconvolved}
+\newacronym{ToTd}{ToTd}{Time-over-Threshold-deconvolved}
 \newacronym{DGL}{DG$\mathrm{_{low}}$}{down-going low}
 \newacronym{DGH}{DG$\mathrm{_{high}}$}{down-going high}
 \newacronym{ES}{ES}{Earth-skimming}
